# Plotting_chiral_response

./: .gitignore  CITATION.cff  README.md  calc_TDM.py  calc_moment_contrib.py  complete_molden.py  get_civecs_from_data.py  get_electric_dipole_from_NWChem.py  get_magnetic_dipole_from_NWChem.py  helicene.basis  make_R.py  make_R_Path.py  make_cube.Multiwfn  make_molden.py  pyproject.toml  read_civecs.F
examples/phenylglycine_hydroxil_oxygen_K_edge_2nd/: elec_x.data  elec_y.data  elec_z.data  mag_x.data  mag_y.data  mag_z.data  manifest.json  molden_template.molden
examples/phenylglycine_hydroxyl_oxygen_K_edge_2nd/: .molden_template.molden.swp  elec_x.data  elec_y.data  input_O1.nw  mag_y.data  orb000001.molden
examples/phenylglycine_hydroxyl_oxygen_K_edge_2nd/expected/: orb000001.molden  plotting.nb
notebooks/: AO_index_check.ipynb  phenylglycine.ipynb
scripts/: get_AO_overlap_from_Multiwfn.py  get_AO_overlap_from_NWChem.py  get_electric_dipole_from_NWChem.py  get_magnetic_dipole_from_NWChem.py  make_NWChem_Multiwfn_AO_index_permutation_matrix.py  read_civecs.py
src/: complete_molden.py  make_NWChem_Multiwfn_AO_index_permutation_matrix.py  make_Rw.py  make_cube.py  make_molden.py
src/plotting_chiral_response.egg-info/: PKG-INFO
